tests/passing/signal.db
const var score = use(0)!