tests/failing/signal_destructure_infinite.db
const var [[[getScore, setScore], setScore], setScore] = use(0)!
